--- a/Django_begginer/myblogapp/posts/templates/posts/index.html
+++ b/Django_begginer/myblogapp/posts/templates/posts/index.html
@@ -5,11 +5,10 @@
   <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-   <title>Hello, world!</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">私のブログ</a>
+  <a class="navbar-brand" href="#">スガヤのブログ</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -17,36 +16,26 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="http://127.0.0.1:8000/posts/">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+      <li class="nav-item active">
+        <a class="nav-link" href="http://www.pornograffitti.jp/?_ga=2.47412065.75155999.1605703580-91063952.1590658384">ポルノグラフィティOfficialSite</a>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+      <li class="nav-item active">
+        {% load static %}
+        <a class="nav-link" href="{% static 'posts/about.html' %}">About</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
 <div class="container">
-  <!-- <h1>ようこそ、私のブログへ！</h1> -->
+  <h1 class="text-center">ようこそ、スガヤのブログへ！</h1>
+  <br /><br />
+  {% load static %}
+  <img src="{% static 'posts/pg.jpg'%}" class = "img-fluid rounded" style="max-height: 200px;"/>
 
-  <h2>最新の投稿</h2>
+  <hr>
+  <h3>最新の投稿</h3>
 
   {% for post in posts.all %}
 
@@ -54,7 +43,7 @@
     <br /><br />
     {{ post.published }}
     <br /><br />
-    <img src="{{ post.image.url }}" class = "img-fluid rounded" />
+    <img src="{{ post.image.url }}" class = "img-fluid rounded" style="max-height: 200px;"/>
     <br />
     {{ post.summary }}
     <br /><br />
