--- a/Django_begginer/djangoai/aiapps/carbike/templates/carbike/result.html
+++ b/Django_begginer/djangoai/aiapps/carbike/templates/carbike/result.html
@@ -8,6 +8,14 @@
     <table class='table'>
         <tbody>
             <tr>
+                <td>ファイル名</td>
+                <td>{{ photo_name }}</td>
+            </tr>
+            <tr>
+                <td>画像ファイル</td>
+                <td><img class='preview-img' src={{ photo_data }}></img></td>
+            </tr>
+            <tr>
                 <td>推定ラベル</td>
                 <td>{{ predicted }}</td>
             </tr>
